# spec-check

./: .gitignore  README.md  agent.ipynb  final_output.md  main.py  pyproject.toml
markdowns/: nepqa.md  product_spec1.md  product_spec2.md  section133.md  specifications.md
markdowns/output/pdf1-1-8/hybrid_auto/: pdf1-1-8.md  pdf1-1-8_content_list.json  pdf1-1-8_content_list_v2.json  pdf1-1-8_middle.json  pdf1-1-8_model.json
misc/: final_output.md
misc/outputs1/: combined_specs.json  requirements.json  specs1.json  specs2.json
outputs/: combined_specs.json  requirements.json  specs1.json  specs2.json
utils/: pdftomd.py  vector_db.py
