[project]
name = "spec-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "openai>=2.41.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
